--- a/_posts/2016-07-09-new-bench.md
+++ b/_posts/2016-07-09-new-bench.md
@@ -4,9 +4,11 @@ title:  "New Bench"
 date:   2016-07-09
 categories: bench
 ---
+## New Bench
 Here is a new bench I made. Call or email for details.
+![Image 1]({{ site.url }}/images/image-1.jpg)
+
 
 more details blah blah blah
 
-![Image 1]({{ site.url }}/images/image-1.jpg)
 ![Image 2]({{ site.url }}/images/image-2.jpg)
